# chip-8-emulator

./: CMakeLists.txt
src/: Chip8.cpp  Chip8.h  Platform.cpp  Platform.h  main.cpp
